[gd_scene load_steps=14 format=3 uid="uid://c3jtxiwbcwywj"]

[ext_resource type="Script" path="res://Nodes/ScreenEffects/screen_effects.gd" id="1_7am6d"]
[ext_resource type="Theme" uid="uid://bxslmllxkgva7" path="res://Resources/Themes/ImpactTheme.tres" id="1_75ttf"]
[ext_resource type="Theme" uid="uid://1xsms24mcd22" path="res://Resources/Themes/GameTheme.tres" id="2_r3imn"]

[sub_resource type="Gradient" id="Gradient_s6p8i"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.1, 0.9)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_opgwb"]
gradient = SubResource("Gradient_s6p8i")
width = 256
height = 144
fill_from = Vector2(0, 1)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_asb44"]
resource_name = "GameOver"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameoverTexture:texture:gradient:offsets")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [PackedFloat32Array(0, 0.1, 0.9), PackedFloat32Array(0, 0.5, 0.501742)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameoverTexture:texture:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.01, 0.99, 1, 1.01, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [PackedColorArray(0, 0, 0, 1, 1, 0, 0, 0.501961, 0, 0, 0, 1), PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1), PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1), PackedColorArray(0.388235, 0.105882, 0.2, 1, 0.388235, 0.105882, 0.2, 1, 0.388235, 0.105882, 0.2, 1), PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameoverText:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameoverText:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GameoverText:theme_override_colors/font_outline_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ReturnToMenuButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2p1ue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameoverTexture:texture:gradient:offsets")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedFloat32Array(0, 0.1, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameoverTexture:texture:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameoverText:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameoverText:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GameoverText:theme_override_colors/font_outline_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ReturnToMenuButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0akrv"]
_data = {
"GameOver": SubResource("Animation_asb44"),
"RESET": SubResource("Animation_2p1ue")
}

[sub_resource type="Gradient" id="Gradient_8bw3b"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.625, 0.65)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 40

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kb3sb"]
gradient = SubResource("Gradient_8bw3b")
width = 256
height = 144
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_1pqoh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:texture:gradient:offsets")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedFloat32Array(0, 0.625, 0.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, 24)]
}

[sub_resource type="Animation" id="Animation_nfnal"]
resource_name = "WaveComplete"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:texture:gradient:offsets")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [PackedFloat32Array(0, 0.625, 0.65), PackedFloat32Array(0, 0.575, 0.7), PackedFloat32Array(0, 0.575, 0.7), PackedFloat32Array(0, 0.625, 0.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 24), Vector2(128, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_366om"]
_data = {
"RESET": SubResource("Animation_1pqoh"),
"WaveComplete": SubResource("Animation_nfnal")
}

[node name="ScreenEffects" type="CanvasLayer"]
process_mode = 3
layer = 16
script = ExtResource("1_7am6d")

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_75ttf")

[node name="GameoverTexture" type="TextureRect" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_opgwb")

[node name="GameoverText" type="Label" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.388235, 0.105882, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 4
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="GameoverAnim" type="AnimationPlayer" parent="GameOverScreen"]
libraries = {
"": SubResource("AnimationLibrary_0akrv")
}

[node name="ReturnToMenuButton" type="Button" parent="GameOverScreen"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -40.0
offset_right = 56.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_r3imn")
text = "Return to menu"

[node name="WaveComplete" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="WaveComplete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_kb3sb")

[node name="Label" type="Label" parent="WaveComplete"]
layout_mode = 0
offset_left = 128.0
offset_top = 24.0
offset_right = 200.0
offset_bottom = 64.0001
theme = ExtResource("1_75ttf")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Wave
Finished"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 1

[node name="WaveCompleteAnim" type="AnimationPlayer" parent="WaveComplete"]
libraries = {
"": SubResource("AnimationLibrary_366om")
}

[connection signal="pressed" from="GameOverScreen/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
